# micro-ROS_moveit2_demo

./: CMakeLists.txt  README.md  package.xml
config/: open_manipulator_x_robot.srdf  open_manipulator_x_robot.urdf.xacro  open_manipulator_x_robot_controller.yaml  open_manipulator_x_robot_controller_fakecontroller.yaml  open_manipulator_x_robot_kinematics.yaml  open_manipulator_x_robot_ompl_planning.yaml  open_manipulator_x_robot_simulated_config.yaml  open_manipulator_x_robot_startposition_fakecontroller.yaml
launch/: microros_moveit2_demo.launch.py  microros_moveit2_demo.rviz  microros_moveit2_demo_openmanipulator.rviz  microros_moveit2servo_demo.launch.py
meshes/: IMU.xacro
src/: microros_moveit2_demo.cpp  microros_moveit2servo_demo.cpp
